add technology to profile