@@ -2,15 +2,13 @@ package cl.programadoreschile.adrian.profilemaster.persistence;
 
 import cl.programadoreschile.adrian.profilemaster.domain.entities.PersonDTO;
 import cl.programadoreschile.adrian.profilemaster.domain.entities.ProfileDTO;
+import cl.programadoreschile.adrian.profilemaster.domain.entities.TechnologyDTO;
 import cl.programadoreschile.adrian.profilemaster.domain.gateways.ProfileGateway;
-import cl.programadoreschile.adrian.profilemaster.persistence.crud.PersonCrudRepository;
-import cl.programadoreschile.adrian.profilemaster.persistence.mappers.PersonMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Repository;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Repository
 public class ProfileRepository implements ProfileGateway {
@@ -18,12 +16,15 @@ public class ProfileRepository implements ProfileGateway {
     @Autowired
     private PersonRepository personRepository;
 
+    @Autowired
+    private TechnologyRepository technologyRepository;
+
     @Override
     public List<ProfileDTO> getAll() {
         final List<PersonDTO> persons = personRepository.getAll();
         return persons.stream()
                 .map(this::setProfile)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -33,8 +34,10 @@ public class ProfileRepository implements ProfileGateway {
     }
 
     private ProfileDTO setProfile(PersonDTO person) {
+        final List<TechnologyDTO> technologies = technologyRepository.getByIdPerson(person.getIdPerson());
         return new ProfileDTO()
-                .setPerson(person);
+                .setPerson(person)
+                .setTechnology(technologies);
     }
 
 }
